Update mysql stuff for no SSL